--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/home"
+            android:id="@+id/trip"
             android:icon="@drawable/road"
             android:contentDescription="@string/ic_trip"
             android:title="@string/title_trip" />
     <item
-            android:id="@+id/list"
+            android:id="@+id/history"
             android:icon="@drawable/history"
             android:contentDescription="@string/ic_history"
             android:title=  "@string/title_history" />
     <item
-            android:id="@+id/form"
+            android:id="@+id/settings"
             android:icon="@drawable/gear"
             android:contentDescription="@string/ic_settings"
             android:title="@string/title_settings" />
