--- a/app/src/main/res/navigation/settings.xml
+++ b/app/src/main/res/navigation/settings.xml
@@ -9,6 +9,6 @@
     <fragment
             android:id="@+id/settingsFragment"
             android:name="com.eagledev.triphelper.ui.SettingsFragment"
-            android:label="settings_fragment"
+            android:label="Settings"
             tools:layout="@layout/settings_fragment" />
 </navigation>
