--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -14,11 +14,11 @@
             android:layout_marginStart="8dp"
             android:maxWidth="200dp"
             android:text="Numero de asientos  disponibles:"
-            app:layout_constraintBottom_toBottomOf="@+id/materialNumberPicker2"
-            app:layout_constraintEnd_toStartOf="@+id/materialNumberPicker2"
+            app:layout_constraintBottom_toBottomOf="@+id/number_picker"
+            app:layout_constraintEnd_toStartOf="@+id/number_picker"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/materialNumberPicker2" />
+            app:layout_constraintTop_toTopOf="@+id/number_picker" />
 
     <TextView
             android:id="@+id/textView2"
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
 
     <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
-            android:id="@+id/materialNumberPicker2"
+            android:id="@+id/number_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -43,7 +43,8 @@
             app:mnpMaxValue="7"
             app:mnpMinValue="1"
             app:mnpValue="1"
-            app:mnpWrapped="false" />
+            app:mnpWrapped="false"
+            app:mnpSeparatorColor="@color/accent"/>
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout"
@@ -51,12 +52,13 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/materialNumberPicker2"
+            app:layout_constraintEnd_toEndOf="@+id/number_picker"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/materialNumberPicker2"
-            app:layout_constraintTop_toBottomOf="@+id/materialNumberPicker2">
+            app:layout_constraintStart_toStartOf="@+id/number_picker"
+            app:layout_constraintTop_toBottomOf="@+id/number_picker">
 
         <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_price"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="numberDecimal"
@@ -65,6 +67,7 @@
 
 
     <com.google.android.material.button.MaterialButton
+            android:id="@+id/b_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
