--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#0288d1</color>
-    <color name="primaryLightColor">#5eb8ff</color>
-    <color name="primaryDarkColor">#005b9f</color>
-    <color name="primaryTextColor">#000000</color>
-    <color name="accent">#ef5350</color>
+    <color name="primaryColor">#28c7fa</color>
+    <color name="primaryColorDark">#00A8D8</color>
+    <color name="primaryTextColor">#fafaf6</color>
+    <color name="accent">#ff304f</color>
+    <color name="text">#002651</color>
+    <color name="secondary">#775ada</color>
 </resources>
