--- a/app/src/main/res/layout/history_detail_fragment.xml
+++ b/app/src/main/res/layout/history_detail_fragment.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Pasajeros:"
+            android:text="@string/passenger_text"
             app:layout_constraintEnd_toStartOf="@+id/center"
             app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Ganancia"
+            android:text="@string/text_revenue"
             app:layout_constraintEnd_toStartOf="@+id/center"
             app:layout_constraintTop_toBottomOf="@+id/tv_passengers_text" />
 
@@ -45,7 +45,7 @@
             app:layout_constraintGuide_percent=".5" />
 
     <TextView
-            android:id="@+id/tv_pssenger_count"
+            android:id="@+id/tv_passenger_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
